# docs/swagger.yaml
@@ -109,29 +109,6 @@ paths:
           schema:
             type: string
       summary: Register user
-  /api/v1/auth/user:
-    get:
-      description: Tries to get current user's data
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: body
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "401":
-          description: Unauthorized
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      summary: Get user data
   /api/v1/feed:
     get:
       consumes:
@@ -159,6 +136,39 @@ paths:
           schema:
             type: string
       summary: Get Pins
+  /api/v1/like:
+    post:
+      consumes:
+      - application/json
+      description: Leaves a like on a flow or deletes the like
+      parameters:
+      - description: flow id
+        example: 456
+        in: body
+        name: pin_id
+        required: true
+        schema:
+          type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Leave a like on a flow
   /health:
     get:
       description: Returns server status
