# internal/rest/like.go
@@ -18,6 +18,17 @@ type LikeHandler struct {
 	ContextTimeout time.Duration
 }
 
+// LikeFlow godoc
+// @Summary Leave a like on a flow
+// @Description Leaves a like on a flow or deletes the like 
+// @Accept json
+// @Produce json
+// @Param pin_id body integer true "flow id" example(456)
+// @Success 200 string Description "OK"
+// @Failure 400 string Description "Bad Request"
+// @Failure 404 string Description "Not Found"
+// @Failure 500 string Description "Internal server error"
+// @Router /api/v1/like [post]
 func (h *LikeHandler) LikeFlow(w http.ResponseWriter, r *http.Request) {
 	claims, _ := r.Context().Value(auth.ClaimsContextKey).(*auth.Claims)
 
